--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.3",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "zod": "^4.1.12"
