--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "react-onesignal": "^3.4.0",
     "react-router": "^7.9.3",
     "react-router-dom": "^7.9.4",
     "socket.io-client": "^4.8.1",
@@ -71,7 +72,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
-    "vite-plugin-pwa": "^1.0.3"
+    "vite-plugin-pwa": "^1.1.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
