--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-device-detect": "^2.2.3",
